CHANGES IN VERSION 1.36.1
-------------------------

UTILITIES

    o fix the compiler warning: -Wformat-security


CHANGES IN VERSION 1.34.0
-------------------------

    o fix the compiler warning: sprintf is deprecated


CHANGES IN VERSION 1.32.0
-------------------------

    o update the web links


CHANGES IN VERSION 1.30.1
-------------------------

    o return a object of S3 class "snpgdsGRMClass" in `snpgdsGRM()` instead of
      a list when `with.id=TRUE`

    o fix a portable issue with Fortran character strings via
      USE_FC_LEN_T & FCONE


CHANGES IN VERSION 1.24.0
-------------------------

    o definition of IBS in the `snpgdsIBS()` help file


CHANGES IN VERSION 1.22.0
-------------------------

    o 'allow.fork=TRUE' is the default in `snpgdsOpen()` since v1.21.2

    o add `print.snpgdsPCAClass`, `print.snpgdsEigMixClass`,
      `print.snpgdsPCASNPLoadingClass`, `print, snpgdsEigMixSNPLoadingClass`,
      `print.snpgdsIBDClass`, `print.snpgdsDissClass`, `print.snpgdsIBSClass`

    o fix a Win32 compiler issue with gcc-4.9

    o update `snpgdsBED2GDS()` with comment.char=""


CHANGES IN VERSION 1.20.1
-------------------------

    o Bug fix: eigenvalues and TraceXTX are correctly calculated in
      `snpgdsPCA(, algorithm="randomized")`


CHANGES IN VERSION 1.20.0
-------------------------

    o a leading tilde in the file path is allowed in `snpgdsGDS2BED()`

    o change the file name "vignettes/SNPRelateTutorial.Rmd" to
      "vignettes/SNPRelate.Rmd", so `vignette("SNPRelate")` can work directly


CHANGES IN VERSION 1.18.1
-------------------------

    o support long vector in `snpgdsIBDSelection()`


CHANGES IN VERSION 1.18.0
-------------------------

    o `snpgdsBED2GDS()` allows a single file name without the extended file
      names (.bed, .fam, .bim)


CHANGES IN VERSION 1.16.0
-------------------------

    o a new option 'useMatrix' for the packed symmetric matrix using the Matrix