@@ -8,7 +8,7 @@
 }
 \usage{
 snpgdsLDpruning(gdsobj, sample.id=NULL, snp.id=NULL, autosome.only=TRUE,
-    remove.monosnp=TRUE, maf=NaN, missing.rate=NaN,
+    remove.monosnp=TRUE, maf=0.005, missing.rate=0.05,
     method=c("composite", "r", "dprime", "corr"), slide.max.bp=500000L,
     slide.max.n=NA, ld.threshold=0.2, start.pos=c("random", "first", "last"),
     num.thread=1L, verbose=TRUE)
