@@ -5,6 +5,13 @@ UTILITIES
 
     o fix the compiler warning: -Wformat-security
 
+    o set 'maf=0.005' & 'missing.rate=0.05' by default in `snpgdsLDpruning()`
+      (for WGS data)
+
+    o show a progress bar in `snpgdsLDpruning()` when 'verbose=TRUE'
+
+    o update the help files of `snpgdsAdmixProp()` and `snpgdsAdmixPlot()`
+
 
 CHANGES IN VERSION 1.34.0
 -------------------------
